--- a/blog/templates/blog/conference.html
+++ b/blog/templates/blog/conference.html
@@ -99,21 +99,34 @@
                 <div class="row"  >
 
                     <div class="col-sm-12 col-lg-12">
-                        <div class="card" style="margin-top: -40px; margin-bottom: 190px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
-                            <div class="card-body">
-                                    <h5 class="card-title">Accomodation and Travel</h5>
-                                       <p style="font-size: 90%; color: black;" > Details will be updated Soon.      </p>
-                            </div>
-                          </div>
+                        <p style="text-align: center; color: black; font-weight: 500; margin-top: 20px;  ">Special Issue of the</p>
+                        <p style="text-align: center ; color: black; font-weight: 500;">Journal of Ramanujan Society of Mathematics and Mathematical Sciences</p>
+                        <p style="text-align: center; color: black; font-weight: 500;">Dedicated to: Prof. A.K. Agarwal on his 70th Birth Anniversary</p>
+                        <img src="{% static 'blog/abc.png' %}" style="display: block; margin:auto; margin-bottom:20px; border-width:5px; border-style:solid" >
+                        <p style="text-align: justify; margin-left: 60px; margin-right: 60px;  color: black; font-weight: 500;">Respected Sir/Madam,<br>
+                                Journal of Ramanujan Society of Mathematics and Mathematical Sciences, Vol. 7, No. 1, 2019 plan to publish a special issue dedicated to Prof. A.K. Agarwal, Ex Professor of Mathematics, Punjab University, Punjab, India on his 70th Birth Anniversary.
+                                </p>
+
+                                <p style="text-align: justify; margin-left: 60px; margin-right: 60px;  color: black; font-weight: 500;">We invite to send your paper/article for this issue in LATEX file on<span style="color: rgb(190, 22, 22)"> E-mail: jrsmams@gmail.com, jrsmams@yahoo.com </span>latest by 20th November 2019.
+                                    </p>
+                                    <p style="text-align: justify; margin-left: 60px; margin-right: 60px; margin-bottom: 150px;  color: black; font-weight: 500;">For more details, kindly visit <a style="color: rgb(190, 22, 22)" href="http://www.rsmams.org/">http://www.rsmams.org/</a> 
+                                    </p>
+
                     </div>
                     
+                    
+                  
+
+                        
                         <div class="col-sm-12 col-lg-12" >
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
+                                            
                                             <p style="font-size: 90%; margin-bottom: 20px; color: black; font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s):<br> Dr. Meenakshi Rana (+91 96460 14128)
 
-                                            </p>
+                                             </p>
+                                           
                                              
                                             
                                             
@@ -121,8 +134,8 @@
                                   </div>
                             </div>
                             <div class="col-sm-12 col-lg-12" style="text-align: center;"  >
-                                    <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <span style="font-weight: bold; color: rgb(153, 13, 13);">Siddarth Sharma</span></h5>
-                                </div>
+                                <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <span style="font-weight: bold; color: rgb(153, 13, 13);">Siddarth Sharma</span></h5>
+                            </div>
 
                 </div>
               </div>
