--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -48,8 +48,14 @@
                     <a href="{% url 'travel' %}"><i class="fas fa-bus"></i> Accomodation and Travel</a>
                 </li>
                 <li>
-                    <a href="{% url 'task-schedule' %}"><i class="fas fa-sticky-note"></i> Talk Schedule</a>
+                    <a href="{% url 'task-schedule' %}"><i class="fas fa-sticky-note"></i> Talk Schedule & Latest Updates</a>
                 </li>
+                <li>
+                        <a href="{% url 'conference' %}"><i class="fas fa-handshake"></i> Conference Preceedings</a>
+                    </li>
+                    <li>
+                            <a href="{% url 'poster' %}"><i class="fas fa-image"></i> Poster </a>
+                        </li>
             </ul>
 
             <ul class="list-unstyled CTAs">
@@ -81,9 +87,9 @@
             <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
                 <div class="container">
                   <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                  <p class="lead" style="color: white; text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                  <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
                     </p>
-                    <p class="lead" style="color: white; text-align: center; font-weight: 400; font-size: 90%;" >Symposia on Applied Mathematics and Engg. Applications
+                    <p class="lead" style="color: rgb(212, 211, 211); text-align: center; font-weight: 400; font-size: 95%;" >Symposia on Applied Mathematics and Engg. Applications
                     </p>
                     
 
@@ -96,7 +102,7 @@
                         <div class="card" style="margin-top: -40px; margin-bottom: 30px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
                                     <h5 class="card-title">About The Conference</h5>
-                                       <p style="font-size: 80%; color: rgb(26, 26, 26);" > School of Mathematics and Computer Applications, Thapar University, is organizing the XII Annual conference of Society for Special Functions and their Applications. This Conference will provide a common platform for interaction, exchange of ideas and latest development in the field of Special Functions and various related fields of Mathematical Sciences. The day to day activities during the conference are designed to be interactive, involving sessions like plenary lectures, invited talks and paper presentation sessions, covering a wide range of topics including Fractional Calculus, Number theory, Combinatorics, Special Functions, Lie Theory, Orthogonal Polynomials, q-Theory etc.       </p>
+                                       <p style="font-size: 80%; color: black;" > School of Mathematics and Computer Applications, Thapar University, is organizing the XII Annual conference of Society for Special Functions and their Applications. This Conference will provide a common platform for interaction, exchange of ideas and latest development in the field of Special Functions and various related fields of Mathematical Sciences. The day to day activities during the conference are designed to be interactive, involving sessions like plenary lectures, invited talks and paper presentation sessions, covering a wide range of topics including Fractional Calculus, Number theory, Combinatorics, Special Functions, Lie Theory, Orthogonal Polynomials, q-Theory etc.A special issue will be published in the <span style = "color: rgb(102, 13, 13); font-weight: 400;">Journal of Ramanujan Society of Mathematics and Mathematical Sciences</span>. Kindly refer to Conference Proceedings for more details.       </p>
                             </div>
                           </div>
                     </div>
@@ -104,13 +110,13 @@
                             <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                 <div class="card-body">
                                         <h5 class="card-title">Call For Papers</h5>
-                                        <p style="font-size: 80%; margin-bottom: 20px; color: rgb(26, 26, 26);" >  The organisers of conference invite papers for presentations (Oral /Poster).
+                                        <p style="font-size: 80%; margin-bottom: 20px; color: black;" >  The organisers of conference invite papers for presentations (Oral /Poster).
                                          </p>
                                          <h5 class="card-title">Important Dates
                                             </h5>
-                                        <p style="font-size: 80%; color: rgb(26, 26, 26); margin-bottom: 0; " >Last date to send abstract of papers (for contributed talk Oral/Poster) : September 03, 2019</p>
-                                         <p style="font-size: 80%; color: rgb(26, 26, 26);margin-bottom: 0;" >Acceptance of contributed talk (Oral/Poster) : September 07, 2019</p>
-                                            <p style="font-size: 80%; color: rgb(26, 26, 26);" >Last date to register (Oral/Poster/participation): September 10, 2019</p>
+                                        <p style="font-size: 80%; color: black; margin-bottom: 0; " >Last date to send abstract of papers (for contributed talk Oral/Poster) : September 03, 2019</p>
+                                         <p style="font-size: 80%; color: black;margin-bottom: 0;" >Acceptance of contributed talk (Oral/Poster) : September 07, 2019</p>
+                                            <p style="font-size: 80%; color: black;" >Last date to register (Oral/Poster/participation): September 10, 2019</p>
                                         
                                 </div>
                               </div>
@@ -199,7 +205,7 @@
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
-                                            <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s): Dr. Meenakshi Rana (+91 96460 14128)
+                                            <p style="font-size: 90%; margin-bottom: 20px; color: black; font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s):<br> Dr. Meenakshi Rana (+91 96460 14128)
 
                                             </p>
                                              
