--- a/blog/templates/blog/poster.html
+++ b/blog/templates/blog/poster.html
@@ -84,7 +84,7 @@
                           
                         </div>
                     </nav>
-                    <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
+                    <div class="jumbotron jumbotron-fluid" style="width: 80%;  margin-bottom: 50px;  display: block; margin: auto;  background: transparent; " >
                         <div class="container">
                           <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
                           <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
@@ -99,21 +99,25 @@
                 <div class="row"  >
 
                     <div class="col-sm-12 col-lg-12">
-                        <div class="card" style="margin-top: -40px; margin-bottom: 190px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
-                            <div class="card-body">
-                                    <h5 class="card-title">Accomodation and Travel</h5>
-                                       <p style="font-size: 90%; color: black;" > Details will be updated Soon.      </p>
-                            </div>
-                          </div>
+                        <img src="{% static 'blog/poster.png' %}" style=" margin-top: 50px; display: block; margin:auto; margin-bottom:20px; max-width: 50%; " class="img-fluid" >
+                        <a style="display: block; margin:auto; border:none; width: 20%; margin-bottom: 150px; border-radius:0; background-color: rgb(158, 21, 21); " href="https://drive.google.com/file/d/1iyUzYl0HB_Blv7UoIoGDJgS_sRErqDXl/view?usp=sharing" class="btn btn-primary btn-lg"> Download</a>
+                        
+
                     </div>
                     
+                    
+                  
+
+                        
                         <div class="col-sm-12 col-lg-12" >
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
+                                            
                                             <p style="font-size: 90%; margin-bottom: 20px; color: black; font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s):<br> Dr. Meenakshi Rana (+91 96460 14128)
 
-                                            </p>
+                                             </p>
+                                           
                                              
                                             
                                             
@@ -121,8 +125,8 @@
                                   </div>
                             </div>
                             <div class="col-sm-12 col-lg-12" style="text-align: center;"  >
-                                    <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <span style="font-weight: bold; color: rgb(153, 13, 13);">Siddarth Sharma</span></h5>
-                                </div>
+                                <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <span style="font-weight: bold; color: rgb(153, 13, 13);">Siddarth Sharma</span></h5>
+                            </div>
 
                 </div>
               </div>
