--- a/blog/templates/blog/registration.html
+++ b/blog/templates/blog/registration.html
@@ -49,8 +49,14 @@
                     <a href="{% url 'travel' %}"><i class="fas fa-bus"></i> Accomodation and Travel</a>
                 </li>
                 <li>
-                        <a href="{% url 'task-schedule' %}"><i class="fas fa-sticky-note"></i> Talk Schedule</a>
+                        <a href="{% url 'task-schedule' %}"><i class="fas fa-sticky-note"></i> Talk Schedule & Latest Updates</a>
                     </li>
+                    <li>
+                            <a href="{% url 'conference' %}"><i class="fas fa-handshake"></i> Conference Preceedings</a>
+                        </li>
+                        <li>
+                                <a href="{% url 'poster' %}"><i class="fas fa-image"></i> Poster </a>
+                            </li>
             </ul>
 
             <ul class="list-unstyled CTAs">
@@ -81,9 +87,9 @@
                     <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
                         <div class="container">
                           <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                          <p class="lead" style="color: white; text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                          <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
                             </p>
-                            <p class="lead" style="color: white; text-align: center; font-weight: 400; font-size: 90%;" >Symposia on Applied Mathematics and Engg. Applications
+                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; font-weight: 400; font-size: 95%;" >Symposia on Applied Mathematics and Engg. Applications
                             </p>
                             
         
@@ -95,8 +101,8 @@
                     <div class="col-sm-12 col-lg-6">
                         <div class="card" style="margin-top: -40px; margin-bottom: 70px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
-                                    <h5 class="card-title">Registration Fees</h5>
-                                    <ul style="list-style: none; margin-left: -40px;">
+                                    <h5 class="card-title">Registration Fees :</h5>
+                                    <ul style="">
                                     <li style="font-size: 85%;"> 
                                     Participants (faculty)	:	Rs. 3000
                                     </li>
@@ -116,8 +122,8 @@
                     <div class="col-sm-12 col-lg-6">
                         <div class="card" style="margin-top: -40px; margin-bottom: 55px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
-                                    <h5 class="card-title">Bank Details</h5>
-                                    <ul style="list-style: none;margin-left: -40px;">
+                                    <h5 class="card-title">Bank Details :</h5>
+                                    <ul style="">
                                     <li style="font-size: 85%;"> 
                                         Name of Beneficiary	:	THAPAR INSTITUTE OF ENGINEERING AND TECHNOLOGY
                                     </li>
@@ -151,10 +157,10 @@ Leela Bhawan, Patiala, Punjab, India.
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
-                                            <p style="font-size: 90%;  color: rgb(26, 26, 26); font-weight: bold;" >The registration should be done before September 10, 2019 by filling out the form available here.
+                                            <p style="font-size: 90%;  color: black; font-weight: bold;" >The registration should be done before September 10, 2019 by filling out the form  <a href = "https://forms.gle/cXG2fe8XrvHHrjAJ7" style="color: rgb(172, 15, 15)" >https://forms.gle/cXG2fe8XrvHHrjAJ7</a>
 
                                             </p>
-                                            <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s): Dr. Meenakshi Rana (+91 96460 14128)
+                                            <p style="font-size: 90%; margin-bottom: 20px; color: black; font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s):<br> Dr. Meenakshi Rana (+91 96460 14128)
 
                                              </p>
                                            
