--- a/blog/templates/blog/talk-schedule.html
+++ b/blog/templates/blog/talk-schedule.html
@@ -48,8 +48,14 @@
                     <a href="{% url 'travel' %}"><i class="fas fa-bus"></i> Accomodation and Travel</a>
                 </li>
                 <li>
-                        <a href="{% url 'task-schedule' %}"><i class="fas fa-sticky-note"></i> Talk Schedule</a>
+                        <a href="{% url 'task-schedule' %}" style="text-align-last: justify;" ><i class="fas fa-sticky-note"></i> Talk Schedule & Latest Updates</a>
                     </li>
+                    <li>
+                            <a href="{% url 'conference' %}"><i class="fas fa-handshake"></i> Conference Preceedings</a>
+                        </li>
+                        <li>
+                                <a href="{% url 'poster' %}"><i class="fas fa-image"></i> Poster </a>
+                            </li>
             </ul>
 
             <ul class="list-unstyled CTAs">
@@ -73,7 +79,7 @@
                    
                 {% else %}
                 <li>
-                    <a href="{% url 'login' %}" style = "background-color: rgb(175, 22, 22); border: none; border-radius: 0;" class="btn btn-primary">Login To Post </a>
+                    <!-- <a href="{% url 'login' %}" style = "background-color: rgb(175, 22, 22); border: none; border-radius: 0;" class="btn btn-primary">Login To Post </a> -->
                 </li>
                 {% endif %}
 
@@ -97,9 +103,9 @@
                     <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
                         <div class="container">
                           <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                          <p class="lead" style="color: white; text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                          <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
                             </p>
-                            <p class="lead" style="color: white; text-align: center; font-weight: 400; font-size: 90%;" >Symposia on Applied Mathematics and Engg. Applications
+                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; font-weight: 400; font-size: 95%;" >Symposia on Applied Mathematics and Engg. Applications
                             </p>
                             
         
@@ -113,8 +119,10 @@
                             <div class="card" style="margin-top: -40px; margin-bottom: 70px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                 <div class="card-body">
                                         <h5 class="card-title">{{post.name}}</h5>
-                                           <p style="font-size: 90%; color: rgb(26, 26, 26);" > {{post.description}}      </p>
+                                           <p style="font-size: 90%; color: black;" > {{post.description}}      </p>
+                                           {% if post.link %}
                                            <a href="{{post.link}}"  >{{post.link}}</a><br>
+                                           {% endif %}
 
                                            {% if user.is_authenticated %}
                                            <a href="{% url 'update-Post' post.id %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;" class="btn btn-primary">Edit</a>
@@ -130,7 +138,7 @@
                         <div class="card" style="margin-top: -40px; margin-bottom: 190px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
                                     <h5 class="card-title">Talk Schedule</h5>
-                                       <p style="font-size: 90%; color: rgb(26, 26, 26);" > Details will be updated Soon.      </p>
+                                       <p style="font-size: 90%; color: black;" > Details will be updated Soon.      </p>
                             </div>
                           </div>
                     </div>
@@ -140,7 +148,7 @@
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-top:190px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
-                                            <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s): Dr. Meenakshi Rana (+91 96460 14128)
+                                            <p style="font-size: 90%; margin-bottom: 20px; color: black; font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s):<br> Dr. Meenakshi Rana (+91 96460 14128)
 
                                             </p>
                                              
