--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -220,7 +220,7 @@
 
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px;  border-radius: 5px;  background: transparent; border: 1px solid rgba(163, 163, 163, 0.274); ">
                                         <div class="card-body">
-                                                <h5 class="card-title">Organising Committee</h5>
+                                                <h5 class="card-title">Local Organising Committee</h5>
 
                                                 <h5 class="card-title">Chief Patron</h5>
                                                 {% if user.is_authenticated %}
@@ -242,7 +242,7 @@
                                              
                                          </ul>
 
-                                         <h5 class="card-title"> Patron</h5>
+                                         <h5 class="card-title"> Patrons</h5>
                                                 {% if user.is_authenticated %}
                                                 <a href="{% url 'new-patron' %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Add</a>
                                                 {% endif %}
@@ -263,7 +263,7 @@
                                          </ul>
 
 
-                                         <h5 class="card-title">Head</h5>
+                                         <h5 class="card-title">Chairman</h5>
                                                 {% if user.is_authenticated %}
                                                 <a href="{% url 'new-head' %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Add</a>
                                                 {% endif %}
@@ -303,7 +303,7 @@
                                              
                                          </ul>
 
-                                         <h5 class="card-title">Local Organising Committee</h5>
+                                         <h5 class="card-title">Organising Secretaries</h5>
                                                 {% if user.is_authenticated %}
                                                 <a href="{% url 'new-organiser' %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Add</a>
                                                 {% endif %}
